# docparse

./: .env.example  .gitignore  app.py  cli.py  pyproject.toml  requirements.txt
docparse/: __init__.py  chunker.py  heading_detector.py  metadata_extractor.py  models.py  noise_filter.py  parser.py  structurer.py
docparse/readers/: __init__.py  docx_reader.py  md_reader.py  pdf.py
