[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docparse"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mistralai>=1.0.0",
    "python-docx>=1.1.0",
    "typer>=0.12.0",
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
docparse = "cli:app"

[tool.setuptools]
py-modules = ["cli", "app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["docparse*"]
